--- a/src/components/DropdownMenu/dropdownmenu.module.css
+++ b/src/components/DropdownMenu/dropdownmenu.module.css
@@ -9,7 +9,13 @@
     padding: .25em 1em;
     font-weight: 500;
     text-transform: uppercase;
+    transition: color .2s ease-in;
 }
+.dropdown__btn:focus{
+    outline: none;
+    color: var(--cyan-gray-clr);
+}
+
 .dropdown__btn::after{
     content: '\203A';
     display: inline-block;
@@ -31,3 +37,17 @@
     max-height: 100vh;
 }
 .dropdown__content a{ font-size: calc(var(--fz-nav-link) - .08rem); }
+
+@supports selector(:focus-visible){
+    .dropdown__btn:focus{ color: currentColor; }
+    .dropdown__btn:focus-visible{
+        outline: none;
+        color: var(--cyan-gray-clr);
+    }
+}
+@media (hover:hover) and (pointer:fine){
+    .dropdown__btn:hover{
+        outline: none;
+        color: var(--cyan-gray-clr);
+    }
+}
