--- a/src/components/MainNavLink/mainnavlink.module.css
+++ b/src/components/MainNavLink/mainnavlink.module.css
@@ -4,4 +4,22 @@
     font-size: var(--fz-nav-link);
     font-weight: 500;
     text-transform: uppercase;
+    transition: color .2s ease-in;
+}
+.link:focus{
+    outline: none;
+    color: var(--cyan-gray-clr);
+}
+@supports selector(:focus-visible){
+    .link:focus{ color: currentColor; }
+    .link:focus-visible{
+        outline: none;
+        color: var(--cyan-gray-clr);
+    }
+}
+@media (hover:hover) and (pointer:fine){
+    .link:hover{
+        outline: none;
+        color: var(--cyan-gray-clr);
+    }
 }
