--- a/src/components/SocialMedia/socialmedia.module.css
+++ b/src/components/SocialMedia/socialmedia.module.css
@@ -9,4 +9,19 @@
 .list__link{
     display: inline-block;
     padding: .5em;
+    transition: color .2s ease-in;
+}
+.list__link:focus{ color: var(--amber-clr); }
+
+@supports selector(:focus-visible){
+    .list__link:focus{ color: currentColor; }
+    .list__link:focus-visible{ 
+        outline: none;
+        color: var(--amber-clr); 
+    }
+}
+@media (hover:hover) and (pointer:fine){
+    .list__link:hover{
+        color: var(--amber-clr); 
+    }
 }
