--- a/src/components/MenuHamburguer/menuhamburguer.module.css
+++ b/src/components/MenuHamburguer/menuhamburguer.module.css
@@ -52,3 +52,10 @@
 }
 @keyframes openingMiddle{ to{ opacity: 0; } }
 @keyframes closingMiddle{ to{ opacity: 1; } }
+
+@media screen and (min-width: 768px){
+    .box{ 
+        --margin: .25em;
+        min-width: 22px; 
+    }
+}
