--- a/src/components/BtnScrollTop/btnscrolltop.module.css
+++ b/src/components/BtnScrollTop/btnscrolltop.module.css
@@ -1,3 +1,34 @@
 .btn{
-    background: red;
+    position: fixed;
+    bottom: 5%;
+    right: 1%;
+    z-index: 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 1em;
+    padding: .25em;
+    border-radius: 7px;
+    border-style: ridge;
+    border-color: transparent;
+    background-color: var(--light-black-clr);
+    color: var(--white-clr);
+    font-size: 1.5rem;
+    opacity: 0;
+    transition: opacity .5s ease-in,
+                border-color .2s ease-in;
 }
+.btn:focus{ border-color: var(--vivid-orange-clr); }
+.btn.--fstSectionIntersected{ opacity: 1; }
+
+@supports selector(:focus-visible){
+    .btn:focus{ border-color: transparent; }
+    .btn:focus-visible{ 
+        outline: none;
+        border-color: var(--vivid-orange-clr); 
+    }
+}
+@media (hover:hover) and (pointer:fine){
+    .btn:hover{ border-color: var(--vivid-orange-clr); }
+}
+.btn.--menu-active{ z-index: -1 };
