--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -1,15 +1,26 @@
 header{
-    position: relative;
+    position: fixed;
+    top: 0;
+    left: 0;
     z-index: 1;
+    width: 100%;
+    box-sizing: border-box;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 1em;
     background-color: transparent;
     color: var(--white-clr);
-    transition: background .5s ease-in-out;
+    transition: all .25s ease-in-out;
 }
-header.--menu-active{ background-color: var(--white-clr); }
+header.--menu-active,
+header.--fstSectionIntersected{ 
+    background: var(--white-clr); 
+    color: var(--black-clr);
+}
+header.--fstSectionIntersected{ box-shadow: 0 2px 10px 1px rgba(0,0,0, .1); }
+header.--hidden{ transform: translateY(-100%); }
+
 a{
     text-decoration: none;
     color: currentColor;
@@ -29,6 +40,7 @@ header.--menu-active .logo a{ color: var(--black-clr) };
     background: none;
     border: none;
     color: currentColor;
+    overflow: auto;
     outline: ridge 2px transparent;
     transition-property: outline-color, transform;
     transition-duration: .2s;
@@ -54,10 +66,9 @@ header.--menu-active .logo a{ color: var(--black-clr) };
     transition-duration: .6s;
 }
 .main-nav__links.--active{
-    height: 100vh;
     padding: 2.5em 1em;
-    color: var(--white-clr);
     overflow: auto;
+    color: var(--white-clr);
 }
 .main-nav__links li:not(:first-child){ margin-top: .5em; }
 @supports selector(:focus-visible){
