--- a/src/components/SectionDescription/sectiondescription.module.css
+++ b/src/components/SectionDescription/sectiondescription.module.css
@@ -1,10 +1,14 @@
 .section-description{
+    font-weight: 350;
+    font-size: var(--fz-section-description);
     color: var(--light-black-clr);
     line-height: 1.5;
-    padding: 1em 0;
+}
+.section-description > p:not(:first-child){
+    margin-top: 1em;
 }
 
-@media screen and (min-width: 1110px){
+@media screen and (min-width: 768px){
     .section-description{
         max-width: 45%;
     }
