--- a/src/components/Pagination/pagination.module.css
+++ b/src/components/Pagination/pagination.module.css
@@ -43,3 +43,8 @@
         color: var(--amber-clr);
     }
 }
+@media screen and (min-width: 576px) {
+    .pagination{
+        padding: 1em;
+    }
+}
