--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,7 @@
 	--fz-impact-text: 1.80rem;
 	--fz-article-date: .80rem;
 	--fz-subsection-title: 1.20rem;
+	--fz-text-aboutus: 1.1rem;
 }
 body{ 
 	font-family: 'Rubik'; 
