--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -9,15 +9,17 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 1em;
-    background-color: transparent;
+    background: linear-gradient(rgba(0,0,0, .6) 70%, transparent);
     color: var(--white-clr);
     transition: all .25s ease-in-out;
 }
 header.--menu-active,
-header.--fstSectionIntersected{ 
+header.--fstSectionIntersected,
+header.--isInAboutSection{ 
     background: var(--white-clr); 
     color: var(--black-clr);
 }
+header.--menu-active{ z-index: 4; }
 header.--fstSectionIntersected{ box-shadow: 0 2px 10px 1px rgba(0,0,0, .1); }
 header.--hidden{ transform: translateY(-100%); }
 
@@ -87,7 +89,6 @@ header.--menu-active .logo a{ color: var(--black-clr) };
 @media screen and (min-width: 992px){
     header{ 
         padding: 1.5em; 
-        background: linear-gradient(rgba(0,0,0, .5) 60%, transparent);
     }
     .main-nav{ display: flex; }
     .main-nav__links{
