--- a/src/components/MenuHamburguer/menuhamburguer.module.css
+++ b/src/components/MenuHamburguer/menuhamburguer.module.css
@@ -12,7 +12,8 @@
     box-sizing: border-box;
 }
 .box.--active .bar,
-.box.--fstSectionIntersected .bar{ 
+.box.--fstSectionIntersected .bar,
+.box.--isInAboutSection .bar{ 
     background-color: var(--black-clr); 
 }
 .bar:nth-child(1){ 
