--- a/src/components/PostModal/postmodal.module.css
+++ b/src/components/PostModal/postmodal.module.css
@@ -1,29 +1,24 @@
 .container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, .75);
+    background-color: rgba(0, 0, 0, .8);
     box-sizing: border-box;
-    padding: 0 1.75em;
+    padding: 2em;
 }
 .content{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 100%;
-    height: 75%;
-    max-height: 90%;
+    height: 100%;
+    max-width: 1000px;
+    margin: 0 auto;
     box-sizing: border-box;
 }
 .img-container{
     --btn-space: 1.5%;
     position: relative;
-    overflow: hidden;
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
 }
 .img{
     display: block;
@@ -42,9 +37,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color .2s ease-in;
 }
 .btn-close{
     margin: 0 .25em .45em auto;
+    width: max-content;
     padding: .15em ;
 }
 .btn-back,
@@ -58,9 +55,39 @@
     box-shadow: 0px 0 5px 2px rgba(0, 0, 0, .4);
     background-color: var(--light-gray-clr);
 }
-.btn-back{
-    left: var(--btn-space);
+.btn-back{ left: var(--btn-space); }
+.btn-fwd{ right: var(--btn-space); }
+
+.btn-close:focus,
+.btn-back:focus,
+.btn-fwd:focus{
+    background-color: var(--amber-clr);
 }
-.btn-fwd{
-    right: var(--btn-space);
+@supports selector(:focus-visible){
+    .btn-close:focus,
+    .btn-back:focus,
+    .btn-fwd:focus{
+        background-color: var(--light-gray-clr);
+    }
+    .btn-close:focus-visible,
+    .btn-back:focus-visible,
+    .btn-fwd:focus-visible{
+        outline: none;
+        background-color: var(--amber-clr);
+    }
+}
+@media (hover:hover) and (pointer:fine){
+    .btn-close:hover,
+    .btn-back:hover,
+    .btn-fwd:hover{ 
+        background-color: var(--amber-clr);
+    }   
+}
+@media screen and (min-width: 768px) {
+    .btn-close, 
+    .btn-back,
+    .btn-fwd{
+        font-size: 1.5rem;
+    }
+    .btn-close{ padding: .25em; }
 }
