--- a/src/components/SectionContainer/sectioncontainer.module.css
+++ b/src/components/SectionContainer/sectioncontainer.module.css
@@ -14,5 +14,8 @@
     .container{ width: 90%; }
 }
 @media screen and (min-width: 1400px) {
-    .container{ width: 70%; }
+    .container{ width: 75%; }
+}
+@media screen and (min-width: 1900px) {
+    .container{ width: 60%; }
 }
