website done, image width & height in html missing

--- a/src/components/LoadingAnimation/loadinganimation.module.css
+++ b/src/components/LoadingAnimation/loadinganimation.module.css
@@ -1,10 +1,50 @@
 .container{
-    color: red;
-    font-size: 4rem;
     position: fixed;
     inset: 50%;
-    width: max-content;
-    height: max-content;
+    width: 75px;
+    height: 75px;
     z-index: 10;
     transform: translate(-50%, -50%);
+}
+.spinner{
+    position: absolute;
+    inset: 50%;
+    transform: translate(-50%, -50%);
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border: solid 5px;
+    border-color: var(--light-black-clr) var(--light-gray-clr) var(--light-gray-clr) var(--light-gray-clr);
+    border-radius: 50%;
+    animation: spinAnimation 3s 1s linear infinite;
+}
+.content{
+    display: inline-block;
+    position: absolute;
+    inset: 50%;
+    transform: translate(-50%, -50%);
+    width: max-content;
+    height: max-content;
+    text-transform: uppercase;
+    color: var(--light-black-clr);
+    font-size: 1rem;
+    font-weight: 900px; 
+    text-shadow: 0 0 10px white,
+                 1px 1px 10px white,
+                -1px -1px 10px white; 
+    animation: blinkAnimation 1.5s 1s infinite;
+}
+
+@keyframes spinAnimation {
+    from{
+        transform: translate(-50%, -50%) rotate(0deg);
+    }
+    to{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
+}
+@keyframes blinkAnimation {
+    to{
+        opacity: 0;
+    }
 }
