--- a/src/components/SectionBackground/sectionbackground.module.css
+++ b/src/components/SectionBackground/sectionbackground.module.css
@@ -9,5 +9,6 @@
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
+	background-color: var(--light-black-clr);
 	box-sizing: border-box;
 }
