--- a/src/components/PostModal/postmodal.module.css
+++ b/src/components/PostModal/postmodal.module.css
@@ -30,19 +30,20 @@
 .btn-back,
 .btn-fwd{
     position: relative; 
-    font-size: 1.25rem;
     font-weight: 600;
     border: none;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: background-color .2s ease-in;
+    background-color: transparent;
 }
 .btn-close{
     margin: 0 .25em .45em auto;
     width: max-content;
-    padding: .15em ;
+    font-size: 2rem;
+    color: var(--light-gray-clr);
+    transition: color .2s ease-in;
 }
 .btn-back,
 .btn-fwd{
@@ -52,42 +53,48 @@
     transform: translateY(-50%);
     height: max-content;
     padding: .25em .55em;
-    box-shadow: 0px 0 5px 2px rgba(0, 0, 0, .4);
-    background-color: var(--light-gray-clr);
 }
 .btn-back{ left: var(--btn-space); }
 .btn-fwd{ right: var(--btn-space); }
+.arrow-icon{
+    font-size: 2.75rem;
+    color: var(--light-gray-clr);
+    text-shadow: -1px -1px 1px black,
+                  1px 1px 1px black;
+    transition: color .2s ease-in;
+}
 
 .btn-close:focus,
-.btn-back:focus,
-.btn-fwd:focus{
-    background-color: var(--amber-clr);
+.btn-back:focus .arrow-icon,
+.btn-fwd:focus .arrow-icon{
+    color: var(--amber-clr);
 }
 @supports selector(:focus-visible){
     .btn-close:focus,
-    .btn-back:focus,
-    .btn-fwd:focus{
-        background-color: var(--light-gray-clr);
+    .btn-back:focus .arrow-icon,
+    .btn-fwd:focus .arrow-icon{
+        color: var(--light-gray-clr);
     }
     .btn-close:focus-visible,
     .btn-back:focus-visible,
     .btn-fwd:focus-visible{
         outline: none;
-        background-color: var(--amber-clr);
+    }
+    .btn-close:focus-visible,
+    .btn-back:focus-visible .arrow-icon,
+    .btn-fwd:focus-visible .arrow-icon{
+        outline: none;
+        color: var(--amber-clr);
     }
 }
 @media (hover:hover) and (pointer:fine){
     .btn-close:hover,
-    .btn-back:hover,
-    .btn-fwd:hover{ 
-        background-color: var(--amber-clr);
+    .btn-back:hover .arrow-icon,
+    .btn-fwd:hover .arrow-icon{ 
+        color: var(--amber-clr);
     }   
 }
 @media screen and (min-width: 768px) {
-    .btn-close, 
-    .btn-back,
-    .btn-fwd{
-        font-size: 1.5rem;
-    }
-    .btn-close{ padding: .25em; }
+    .btn-close{ font-size: 3rem; }
+    .arrow-icon{ font-size: 3.5rem; }
 }
