--- a/src/components/PostsGrid/postsgrid.module.css
+++ b/src/components/PostsGrid/postsgrid.module.css
@@ -1,41 +1,5 @@
-.postsgrid{
-    width: 100%;
-}
-.btn-container{ 
-    position: relative;
-    padding: 0;
-    border: none;
-    background: transparent;
-    height: 250px; 
-    width: 100%;
-}
-.btn-container::after{
-    content: '';
-    position: absolute;
-    inset: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, .7);
-    opacity: 0;
-    transition: opacity .2s ease-in-out;
-}
-.img{
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.btn-container:focus::after{ opacity: 1; }
+.postsgrid{ width: 100%; }
 
-@supports selector(:focus-visible){
-    .btn-container:focus::after{ opacity: 0; }
-    .btn-container:focus-visible{ outline: none; }
-    .btn-container:focus-visible::after{ opacity: 1; }   
-}
-@media (hover:hover) and (pointer:fine){
-    .btn-container:hover::after{ opacity: 1; }   
-}
 @media screen and (min-width: 576px){
     .postsgrid{
         display: grid;
